src/index.css
/* ----- Tail wind directives */
@tailwind base;
@tailwind components;
@tailwind utilities;
/* ----- Google fonts */
@import url("https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Merienda:wght@300..900&display=swap");

body {
  background-color: #07130d;
  max-width: 100vw;
}

/* ----- layer utilities */
@layer utilities {
  /* ----- Hover effects for navbar list items */
  .list-items-hover {
    cursor: pointer;
    transition: all 500ms ease-in-out;
  }

  .list-items-hover:hover {
    color: #ffd600;
  }
  /* ----- Stand out letters in text */
  .stand-out {
    font-style: italic;
    color: white;
  }
  /* ----- Animations for mobile menu slide in */
  .mobile-menu-animation {
    transition-property: opacity, transform;
    transition-duration: 0.5s;
    transition-timing-function: ease-out;
  }

  .mobile-menu-animation.open {
    opacity: 1;
    transform: translateX(0);
  }

  .mobile-menu-animation.close {
    opacity: 0;
    transform: translateX(100%);
  }
}

